Fixed footer on mobile...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1330,6 +1330,16 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
   .md\:mt-5 {
     margin-top: 1.25rem;
   }
@@ -1338,12 +1348,20 @@ video {
     margin-right: 0px;
   }
 
+  .md\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
   .md\:h-\[30vh\] {
     height: 30vh;
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:p-4 {
+    padding: 1rem;
   }
 
   .md\:px-10 {
